--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "joi": "^17.12.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.0",
+    "nodemailer": "^6.9.11",
     "nodemon": "^3.1.0"
   }
 }
